# BigDataProject

./: .gitignore  README.md  docker-compose.yml
.benchmarks/Linux-CPython-3.13-64bit/: 0001_stage1_20251007_163320.json  0002_stage1_20251007_163553.json
benchmarks/: plot_benchmarks.py  test_performance.py
control/: downloaded_books.txt  indexed_books.txt
data_layer/: Dockerfile  consts.py  downloader.py  indexer.py  indexer_hierarchical.py  indexer_redis.py  metadata_mysql.py  metadata_parser.py  metadata_redis.py  metadata_sqlite.py  pipeline.py  pyproject.toml
data_layer/application/: __init__.py  consts.py  downloader.py  indexer.py  pipeline.py  pyproject.toml  storage_backends.py
data_layer/benchmarks/: test_inverted_index_bench.py  test_metadata_bench.py
data_layer/datalake/: body_pg1080.txt  body_pg11.txt  body_pg1342.txt  body_pg74.txt  header_pg1080.txt  header_pg1342.txt  header_pg74.txt
datalake/: body_pg84.txt  header_pg11.txt  header_pg84.txt
datalake/20251006/03/: pg1342_body.txt  pg1342_header.txt
datalake/20251007/10/: 11.header.txt
datalake/20251007/12/: 84.header.txt
datalake/20251007/13/: 1080.header.txt
datalake/20251007/14/: 74.header.txt
datalake/20251007/15/: 1342.header.txt
datamarts/: benchmark_summary.txt  books.sqlite  inverted_index.json  metadata.sqlite  metadata.sqlite3
datamarts/inverted_index/A/: accidents.txt  annual.txt
datamarts/inverted_index/C/: cattle.txt  cheerfully.txt  (+1 more)
scripts/: generate_benchmark_report.py
scripts copy/: generate_benchmark_report.py
tests/: test_functionality.py
(+26 files in other folders)
