[project]
name = "data_layer"
version = "0.1.0"
description = "Search Engine Data Layer — Stage 1 (Redis + SQLite + MySQL)"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "aiofile>=3.9.0",
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "pymysql>=1.1.0",
    "pytest>=8.3.0",
    "pytest-benchmark>=4.0.0",
    "matplotlib>=3.9.0",
]


[tool.uv]
dev-dependencies = []
