[project]
name = "data_layer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofile>=3.9.0",
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "psycopg2-binary>=2.9.0",
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0",
    "psutil>=5.9.0",
]
